# metrics-api-gw

./: .env.example  .gitignore  README.md  app.py  config.py  pyproject.toml  replit.nix
api/: metrics_handler.py
schemas/: metric.avsc
services/: kafka_consumer.py  kafka_producer.py
static/: swagger.json
templates/: swagger-ui.html
